# GeekMagic-Clawdmeter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flash.sh  sdkconfig.defaults  update.py
.cargo/: config.toml
src/: api.rs  display.rs  main.rs  nvs.rs  ui.rs  wifi.rs
