[package]
name = "clawdmeter-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "clawdmeter-rs"
harness = false

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-hal  = "0.46"
esp-idf-svc  = { version = "0.52", features = ["experimental"] }
embedded-svc = "0.29"
embedded-graphics = "0.8"
heapless  = "0.9"
anyhow    = "1"
log       = "0.4"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
